--- a/GastodeViagem/app/src/main/res/layout/activity_main.xml
+++ b/GastodeViagem/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     tools:context=".MainActivity">
 
     <EditText
+        android:id="@+id/editDistance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -22,6 +23,7 @@
         android:text="@string/total_de_quilometros" />
 
     <EditText
+        android:id="@+id/editPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -35,6 +37,7 @@
         android:text="@string/preco_por_litro" />
 
     <EditText
+        android:id="@+id/editAutonomy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -57,6 +60,7 @@
         android:textSize="20sp" />
 
     <TextView
+        android:id="@+id/tvToatalValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -66,12 +70,13 @@
         android:textSize="40sp" />
 
     <Button
+        android:id="@+id/btn_calculate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:background="@drawable/btn_radius"
-        android:padding="18dp"
+        android:padding="12dp"
         android:text="@string/btn_calcular"
         android:textColor="@color/white"
         android:textSize="24sp" />
